--- a/index (2).html
+++ b/index (2).html
@@ -163,7 +163,7 @@
       <h2>Contact</h2>
       <p class="subtitle">Let’s connect for internships, collaborations, or student projects.</p>
       <ul style="list-style:none;padding:0;margin:0">
-        <li><strong>Email:</strong> <a href="mailto:lara@example.com">lara@example.com</a></li>
+        <li><strong>Email:</strong> <a href="mailto:laraallabdi@gmail.com">lara@example.com</a></li>
         <li><strong>GitHub:</strong> <a href="https://github.com/laraallabdi" target="_blank" rel="noopener">github.com/laraallabdi</a></li>
         <li><strong>LinkedIn:</strong> <a href="#" target="_blank" rel="noopener">linkedin.com/in/your-handle</a></li>
       </ul>
